--- a/attandance/pom.xml
+++ b/attandance/pom.xml
@@ -50,6 +50,10 @@
             <version>2.3.0</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
@@ -71,11 +75,6 @@
         </dependency>
         <dependency>
             <groupId>com.oracle.ojdbc</groupId>
-            <artifactId>osdt_cert</artifactId>
-            <version>19.3.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle.ojdbc</groupId>
             <artifactId>osdt_core</artifactId>
             <version>19.3.0.0</version>
         </dependency>
@@ -83,6 +82,12 @@
             <groupId>com.oracle.ojdbc</groupId>
             <artifactId>oraclepki</artifactId>
             <version>19.3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
 
 
