--- a/attandance/src/main/resources/application.properties
+++ b/attandance/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 server.port=8081
 
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@ora1.uhk.cz:1521:orcl
-spring.datasource.username=team126
-spring.datasource.password=team126
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:oracle:thin:@ora1.uhk.cz:1521:orcl
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+
 
 spring.jpa.hibernate.ddl-auto = update
 
